2003-02-06  Christian Neumair <chris@gnome-de.org>

	* providers/ldap/.cvsignore: Added.
	* providers/oracle/gda-oracle-provider.c: Fixed typo.

2003-02-03  Sergey N. Belinsky <sergey_be@mail.ru>

	* providers/ibmdb2/*: added support for transactions, and schemas
	for aggregates, users, views, database, procedures, types, triggers
	and indexes. Added recordset class for IBM DB2.

2003-02-04  Akira TAGOH <tagoh@gnome-db.org>

	* don't use C++ comment in C sources/headers. it breaks the
	  compilation with -ansi option. (#105037)

2003-02-01  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* providers/oracle/gda-oracle-provider.c (gda_oracle_init_md_recset,
	gda_oracle_fill_md_data): fixed field descriptions.

2003-01-31  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-client.c: unref the weak references to avoid hash table
	corruption when unref on the provider (which ends up removing the
	providers in the hash table while inside another g_hash_table_foreach).

2003-01-31  Steve Fosdick <fozzy@pelvoux.demon.co.uk>

	* providers/oracle/utils.c (gda_oracle_set_value): remove trailing
	spaces from strings read from the database.

2003-01-28  Yanko Kaneti <yaneti@declera.com>

	* libgda.spec.in: added --without flags.

2003-01-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda.spec.in: removed idl directory.

2003-01-27  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0,10.0

2003-01-28  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/odbc/gda-odbc-provider.c:
	* providers/odbc/gda-odbc-recordset.c:
	* providers/odbc/gda-odbc.h:
	* providers/odbc/utils.c: removed config.h.

2003-01-27  Santi Camps <santi@gnome-db.org>

	* libgda/report/libgda-report/Makefile.am: 
	* libgda/report/libgda-report/gda-report.h: 
	  new sources added

	* libgda/report/testing/gda-report-test.c: some new tests added
	* libgda/report/libgda-report/gda-report-item.[ch]: new generical functions 
	  needed to manage the internal structure