@@ -1,3 +1,11 @@
+2003-02-08  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>
+
+	* providers/oracle/gda-oracle-provider.[ch]: Introduced a default namespace
+	for tables in which all the tables from ALL_TABLES are included,
+	i.e. all those the user has privilege for, but when names clash
+	the table in the user's own schema masks the other table(s).  Uses
+	a binary tree cache of table owners.
+
 2003-02-06  Christian Neumair <chris@gnome-de.org>
 
 	* providers/ldap/.cvsignore: Added.
